--- a/pages/login.html
+++ b/pages/login.html
@@ -26,7 +26,7 @@
                             <p><strong>Email:&nbsp; &nbsp; &nbsp; &nbsp; <input type="text" name="userName" placeholder="Person@example.net"></strong></p>
                             <p><strong>Password: <input type="text" name="passWord" placeholder="********"></strong></p>    
                     </div>
-                            <button input type="submit" value="Login"></button>            
+                            <input type="submit" value="Login">           
                         </form>
                 </div>
 
@@ -46,7 +46,7 @@
 
                     <div class="guestButton">
 
-                        <button class="guestBtn">About</button>
+                        <button class="guestBtn">Use as Guest</button>
 
                         <!-- <input type="submit1" value="Use as guest" class = "button button1">  -->
                         
