--- a/pages/signup.html
+++ b/pages/signup.html
@@ -18,9 +18,9 @@
                     </div>
 
                     <div class="signUp">
-                        <form action="/create" method="post">
-                            <p><strong>Name: <input type="text" name="passWord" placeholder="Name"></strong></p>        
-                            <p><strong>Email:&nbsp; &nbsp; &nbsp; &nbsp; <input type="text" name="userName" placeholder="Person@example.net"></strong></p>
+                        <form action="/createAccount" method="post">
+                            <p><strong>Username: <input type="text" name="userName" placeholder="Name"></strong></p>        
+                            <p><strong>Email: <input type="text" name="emailAddress" placeholder="Person@example.net"></strong></p>
                             <p><strong>Password: <input type="text" name="passWord" placeholder="********"></strong></p>
                             <p><strong>Confirm Password: <input type="text" name="confirmPassWord" placeholder="********"></strong></p>
                             <input type="submit" value="Sign Up">         
