--- a/pages/feeling.html
+++ b/pages/feeling.html
@@ -4,22 +4,22 @@
         <link rel = "stylesheet" href = "theme.css">
     </html>
     <body>
-        <!-- Navbar -->
+        
         <div class = "header">
+            <!-- Navbar -->
         </div>
+
         <div class = "main">
 
-            <div class="slidecontainer">
-                <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-                <p>Value: <span id="demo"></span></p>
-              </div>
+            
 
             <div class = "face">
-                <!-- Smiley face goes here -->
+                <img src = "smileyFaces/smileyFace3.png">
             </div>
 
-            <div class = "slider">
-                <!-- Slider Goes Here -->
+            <div class="slidecontainer">
+                <input type="range" min="1" max="5" value="3" class="slider" id="myRange">
+                <p>Value: <span id="demo"></span></p>
             </div>
 
             <div class = "feelingText">
