--- a/pages/home.html
+++ b/pages/home.html
@@ -6,40 +6,44 @@
         </head>
         <body>
 
-            <div class = "navbar">
-                <p> Navbar placeholder... </p>                
+            <div class = "header">
+                <p> M H W A </p>                
             </div>
 
             <div class = "main">
+            
+                <div class = "activities">
+                    <h1> Activities: </h1>
+                    <p> Find activities to reduce stress and help you cope with your feelings. </p>
 
-            <div class = "feelingMessage">
-                <div class = "feelingHeader">
-                    <h1> How are you feeling today? </h1>                   
-                    <p> Record your feelings </p>                        
+                    <div class = "option1">
+                        <p> Breathing Exercises </p>
+                    </div>
+
+                    <div class = "option2">
+                        <p> Minfulness </p>
+                    </div>
+
                 </div>
 
-                <div class = "faceClass">
-                    <img src = "smileyFaces/smileyFace5.png" width = "10%">
-                </div> 
-                    
-            </div>
+                <div class = "externalHelp">
+                    <h1>External Help:</h1>
+                    <p> Find support from mental health charirites and other services. </p>
 
+                    <div class = "option1">
+                        <p> NHS </p>
+                    </div>
 
-            <div class = "activities">
-                <h1> Activities: </h1>
-                <div class = "option">
-                    <p> Breathing Exercises </p>
+                    <div class = "option2">
+                        <p> Mind </p>
+                    </div>
+
+                    <div class = "option3">
+                        <p> Samaritans </p>
+                    </div>
                 </div>
-            </div>
 
-            <div class = "externalHelp">
-                <h1>External Help:</h1>
-                <div class = "helpOptions">
-                    <p>NHS</p>
-                </div>
             </div>
-
-        </div>
 
         </body>
     </html>
