--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
                 <h1> M H W A </h1>
             </div>   
 
-            <!-- Body of page in a div -->
+        <!-- Body of page in a div -->
             <div class = "main">
                 <div class = "startParagraph">
                     <div class = "loginParagraph">
@@ -43,18 +43,16 @@
                         <p> How are you feeling? </p>
                     </div>
 
-                    <div class = "continue">               
-                        <button id = "continue">Start</button>  
+                    <div class = "start">               
+                        <button id = "startButton">Start</button>  
                     </div>
 
             </div>
 
             <div class = "footer">
 
-                    <div class = "aboutButton">
-
-                        <button class = "aboutBtn">About</button>
-
+                    <div class = "about">
+                        <button class = "aboutButton">About</button>
                     </div>
                
             </div>
