--- a/pages/home.html
+++ b/pages/home.html
@@ -32,14 +32,18 @@
 
                     <div class = "option1">
                         <p> NHS </p>
+                        <button id = "nhsButton"> Go </button>
                     </div>
 
                     <div class = "option2">
                         <p> Mind </p>
+                        <button id = "mindButton"> Go </button>
                     </div>
 
                     <div class = "option3">
                         <p> Samaritans </p>
+
+                        <button id = "samaritansButton"> Go </button>
                     </div>
                 </div>
 
