--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title> Login - M H W A </title>
+            <title> Start - M H W A </title>
             <link rel = "stylesheet" href = "theme.css">
             <meta name = "viewport" content = "width=device-width, initial-scale=1.0">            
         </head>
@@ -32,6 +32,7 @@
                         <div class = "plus">
                             <p>+</p>
                         </div>
+                        
                         <input type = "range" min = "1" max = "5" value = "3" class = "slider" id = "feelingRange">
                         <p>Value: <span id = "valueOut"></span></p>
                         <p id = "feelingOut"></p>
