--- a/pages/home.html
+++ b/pages/home.html
@@ -18,6 +18,7 @@
 
                     <div class = "option1">
                         <p> Breathing Exercises </p>
+                        <button id = "breathingButton"> Go </button>
                     </div>
 
                     <div class = "option2">
@@ -29,14 +30,17 @@
                 <div class = "externalHelp">
                     <h1>External Help:</h1>
                     <p> Find support from mental health charirites and other services. </p>
+                    <p> These links will take you outside the Mental Health Web App and take you to the respective organisations page. </p>
 
-                    <div class = "option1">
-                        <p> NHS </p>
+                    <div class = "option1">                        
+                        <img src = "images/NHS.jpg">
+                            <p> National Health Service </p>
                         <button id = "nhsButton"> Go </button>
                     </div>
 
                     <div class = "option2">
-                        <p> Mind </p>
+                        <img src = "images/mind.jpg">
+                            <p> Mind </p>
                         <button id = "mindButton"> Go </button>
                     </div>
 
@@ -46,8 +50,7 @@
                         <button id = "samaritansButton"> Go </button>
                     </div>
                 </div>
-
             </div>
-
         </body>
+        <script src = "script.js"></script>
     </html>
