Working Breathing Exercises
Addition of Working Breathing Exercises and general progress to other sections.

15/03/2022.

--- a/pages/breathing.html
+++ b/pages/breathing.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title> Home - M H W A </title> 
+            <title> Breathing Exercises - M H W A </title> 
             <link rel = "stylesheet" href = "theme.css">
+            <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         </head>
         <body>
 
