--- a/pages/home.html
+++ b/pages/home.html
@@ -3,6 +3,7 @@
         <head>
             <title> Home - M H W A </title> 
             <link rel = "stylesheet" href = "theme.css">
+            <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         </head>
         <body>
 
@@ -45,6 +46,7 @@
                     </div>
 
                     <div class = "option3">
+                        <img src = "images/samaritans.png">
                         <p> Samaritans </p>
 
                         <button id = "samaritansButton"> Go </button>
