--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
         <body>
 
             <div class = "header">
-                <p> M H W A </p>                
+                <p> Mental Health Web Application </p>                
             </div>
 
             <div class = "main">
@@ -22,6 +22,9 @@
                         <input id = "passwordInput" placeholder = "********"></input>
                         
                     </div>
+
+
+                    
 
                     <div class = "loginbutton">
                         <button id = "login"> Login </button>
