--- a/pages/about.html
+++ b/pages/about.html
@@ -6,18 +6,25 @@
             <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         </head>
         <body>
-            <div class = "header">
-                <p> M H W A </p>                
+
+            <div class = "header" onclick = "homeFunction()">
+                <p> Mental Health Web Application </p>                
             </div>
+
             <div class = "main">
-                <div class = "about">
-                    <h1> About the Mental Health Web App </h1>
-                    <p> The Mental Health Web App is designed to assist users who suffer with mental health problems such as Autism, Depression, Anxiety et al and is Free to use. </p> <br>
-                    <p> Note. This Web App is not a Replacement for medical treatment with a trained professional. </p> <br>
-                    <button id = "startButton"> Start </button>
-                    <button id = "backButton"> Back </button>
+                <div class = "activities">
+                    <h1> About: </h1>
+                    <div class = "login">
+                        <h1> About the Mental Health Web App </h1>
+                        <p> The Mental Health Web App is designed to assist users who suffer with mental health problems such as Autism, Depression, Anxiety et al and is Free to use. </p> <br>
+                        <p> Note. This Web App is not a Replacement for medical treatment with a trained professional. </p> <br>
+                    </div>
                 </div>
             </div>
         </body>
-        <script src = "script.js"></script>
+        <script>
+            function homeFunction() {
+                location.href = "http://localhost:9000/"
+            }
+        </script>
     </html>
