General Progress and JS cleanup
General progress and organising JavaScript code in the the Script.js File instead of internally in each page.

JS onclicks instead of event Listeners.

Additional routes in server.js.

29/03/2022.

--- a/pages/diarycreation.html
+++ b/pages/diarycreation.html
@@ -8,7 +8,7 @@
         <body>
 
             <div class = "header" onclick = "homeFunction()">
-                <p> M H W A </p>                
+                <p> Mental Health Web App </p>                
             </div>
 
             <div class = "main">
