--- a/pages/about.html
+++ b/pages/about.html
@@ -15,16 +15,13 @@
                 <div class = "activities">
                     <h1> About: </h1>
                     <div class = "login">
-                        <h1> About the Mental Health Web App </h1>
+                        <!-- <h1> About the Mental Health Web App </h1> -->
                         <p> The Mental Health Web App is designed to assist users who suffer with mental health problems such as Autism, Depression, Anxiety et al and is Free to use. </p> <br>
                         <p> Note. This Web App is not a Replacement for medical treatment with a trained professional. </p> <br>
+                        <button id = "backButton" onclick = "backFunction()">Start</button>
                     </div>
                 </div>
             </div>
         </body>
-        <script>
-            function homeFunction() {
-                location.href = "http://localhost:9000/"
-            }
-        </script>
+        <script src = "script.js"></script>
     </html>
