Addition of Meditation Page
Addition of Meditation Page, clean up of CSS and general progress to home.html

19/04/2022.

--- a/pages/meditation.html
+++ b/pages/meditation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title> Home - Mental Health Web App </title> 
+            <title> Meditation - Mental Health Web App </title> 
             <link rel = "stylesheet" href = "theme.css">
             <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         </head>
@@ -23,25 +23,25 @@
                     </div>
 
                     <div class = "option">
-                        <p> Mindfulness </p>
+                        <p> Minfulness </p>
                         <button id = "mindfulnessButton" onclick = "mindfulnessFunction()"> Go </button>
                     </div>
 
                     <div class = "option">
                         <p> Diary </p>
-                        <button id = "diaryButton" onclick = "diaryFunction()"> Go </button>
+                        <button id = "diaryButton"> Go </button>
                     </div>
 
                     <div class = "option">
                         <p> Meditation </p>
-                        <button id = "meditationButton" onclick = "meditationFunction()"> Go </button>
+                        <button id = "diaryButton"> Go </button>
                     </div>
 
                 </div>
 
                 <div class = "externalHelp">
-                    <h1> External Help: </h1>
-                    <p> Find support from mental health charities and other services. </p>
+                    <h1>External Help:</h1>
+                    <p> Find support from mental health charirites and other services. </p>
                     <p> These links will take you outside the Mental Health Web App and take you to the respective organisations page. </p>
 
                     <div class = "option">                       
@@ -57,7 +57,6 @@
                     <div class = "option">
                         <p> Samaritans </p>
                         <button id = "samaritansButton" onclick = "samaritansFunction()"> Go </button>
-                        <!-- <a href = "tel:116123" > 116 123 </a> -->
                     </div>
 
                     <div class = "option">
@@ -92,10 +91,6 @@
 
             function breathingFunction() {
                 location.href = "http://localhost:9000/breathing";
-            }
-
-            function diaryFunction() {
-                location.href = "http://localhost:9000/diary";
             }
 
             function diaryFunction() {
