--- a/pages/breathing.html
+++ b/pages/breathing.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title> Breathing Exercises - M H W A </title> 
+            <title> Breathing Exercises - Mental Health Web App </title> 
             <link rel = "stylesheet" href = "theme.css">
             <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         </head>
         <body>
 
-            <div class = "header">
-                <p> M H W A </p>                
+            <div class = "header" onclick = "homeFunction()">
+                <p> Mental Health Web Application </p>                
             </div>
 
             <div class = "main">
@@ -16,70 +16,20 @@
                 <div class = "activities">
 
                     <h1> Breathing Exercises: </h1>
-
                     <p> Use breathing exercises to calm down and regain focus. </p>
-
-                    <p> Breathe in for 5 seconds, then breathe out for 5 seconds. </p>
-
+                    <p> Breathe in for 4 seconds, then breathe out for 4 seconds. </p>
                     <p> Do this for 2 minutes. </p>                    
 
-                    <button id = "breatheButton"> Start </button>
+                    <button id = "breatheButton" onclick = "breatheFunction()"> Start </button>
 
                     <div class = "breathingText">
-                        <p id = "breathingTime"></p>
+                        <h1 id = "breathingTime"></h1>
                     </div>
 
                 </div>
             </div>
         </body>
 
-    <script>
-
-         document.getElementById("breatheButton").addEventListener("click", breatheFunction);
-
-            function breatheFunction() {
-
-                function toggleCalls() {
-
-                    var timer = {timeout: null};
-
-                    function callA () {
-
-                    console.log("A Called");
-                    document.getElementById("breathingTime").innerHTML = "Breathe In";
-                    
-
-                    timer.timeout = setTimeout(callB, 5000);
-
-                }
-
-                function callB () {
-                    console.log("B Called");
-                    document.getElementById("breathingTime").innerHTML = "Breathe Out";
-
-                    timer.timeout = setTimeout(callA, 5000);
-
-                }
-
-                callA();
-
-                return timer;
-
-                }
-
-                var timer = toggleCalls();
-
-                setTimeout(function () {
-
-                clearTimeout(timer.timeout);
-
-                console.log("Finished");
-                document.getElementById("breathingTime").innerHTML = "Stopped";
-
-
-                }, 120000);
-            }
-
-
-    </script>
+    <script src = "breathingscript.js"> </script> 
+    <script src = "script.js"> </script>
     </html>
