--- a/pages/home.html
+++ b/pages/home.html
@@ -69,7 +69,7 @@
 
                     <div class = "option">
                         <p> Trevor Project (LGBTQ+) </p>
-                        <button id = "trevorProjectButton" onclick = "trevorProjectFunction()"> Go </button>
+                        <button id = "trevorProjectButton" onclick = "trevorprojectFunction()"> Go </button>
                     </div>
                 </div>
             </div>
